--- a/index.html
+++ b/index.html
@@ -32,6 +32,35 @@
             </div>
     </header>
 
+    <!-- Informações do Personagem -->
+    <section class="ficha" id="basicos">
+        <h2>Informações do Personagem</h2>
+
+        <div><label for="nome">Nome:</label>
+            <input type="text" id="nome" placeholder="Digite o nome">
+        </div>
+        <div><label for="idade">Idade:</label>
+            <input type="number" id="idade" min="0" value="0">
+        </div>
+        <div><label for="sexo">Sexo:</label>
+            <input type="text" id="sexo" placeholder="M/F/Outro">
+        </div>
+        <div><label for="tamanho">Tamanho:</label>
+            <input type="text" id="tamanho" placeholder="Pequeno / Médio / Grande">
+        </div>
+        <div><label for="raca">Raça:</label>
+            <input type="text" id="raca" placeholder="Ex: Humano, Elfo">
+        </div>
+        <div><label for="cor">Cor:</label>
+            <input type="text" id="cor" placeholder="Descrição de cor/pele">
+        </div>
+        <div> <label for="nivel">Nível:</label>
+            <input type="number" id="nivel" min="1" value="1">
+        </div>
+
+    </section>
+
+
     <!-- Recursos Vitais (base + extras manuais) -->
     <section class="recursos-vitais">
         <!-- Cabeça -->
