--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <!-- Informações do Personagem -->
     <section class="ficha" id="basicos">
         <h2>Informações do Personagem</h2>
-
-        <div><label for="nome">Nome:</label>
+        <div class="conteudo">
+            <div><label for="nome">Nome:</label>
             <input type="text" id="nome" placeholder="Digite o nome">
         </div>
         <div><label for="idade">Idade:</label>
@@ -58,11 +58,14 @@
             <input type="number" id="nivel" min="1" value="1">
         </div>
 
+        </div>
+
     </section>
 
 
     <!-- Recursos Vitais (base + extras manuais) -->
     <section class="recursos-vitais">
+        <h2>Recursos Vitais</h2>
         <!-- Cabeça -->
         <div class="recurso" data-parte="6">
             <div class="titulo">Cabeça</div>
