Ajustes em Informações do Personagem

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <input type="number" id="idade" min="0" value="0">
         </div>
         <div><label for="sexo">Sexo:</label>
-            <input type="text" id="sexo" placeholder="H/M">
+            <input type="text" id="sexo" placeholder="M/F">
         </div>
         <div><label for="tamanho">Tamanho:</label>
             <input type="text" id="tamanho" placeholder="Pequeno / Médio / Grande">
