--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                     <input type="file" id="importJson" accept=".json" style="display:none;">
                 </div>
             </div>
-            <button id="btnAbrirRegras" class="btn">📖 Regras</button>
 
 
     </header>
@@ -248,115 +247,118 @@
     <!-- Barra Fixa de Status (exibe TOTAIS com +/- para dano/gasto) -->
     <footer class="barra-status">
 
-        <!-- Painel de Regras -->
-        <div id="painelRegras" class="painel-regras">
-            <button id="fecharRegras" class="btn small fechar">✖ Fechar</button>
-            <div class="conteudo-regras">
-                <h2>📖 Regras — RPG PI FLASH</h2>
-                <div id="textoRegras">Carregando regras...</div>
-            </div>
-        </div>
+        <div class="abas-barra">
+            <button id="toggleBarra" class="aba">📊 Status</button>
+            <button id="toggleRegras" class="aba">📖 Regras</button>
         </div>
 
+        <div class="conteudo-barra">
+            <!-- Vida por parte -->
+            <div class="status-area">
+                <div class="status-box pv" data-type="pv" data-id="6">Cabeça<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="pv" data-id="6">−</button>
+                        <button class="btn small plus" data-type="pv" data-id="6">+</button>
+                    </div>
+                </div>
+                <div class="status-box pv" data-type="pv" data-id="5">Tronco<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="pv" data-id="5">−</button>
+                        <button class="btn small plus" data-type="pv" data-id="5">+</button>
+                    </div>
+                </div>
+                <div class="status-box pv" data-type="pv" data-id="4">Perna 1<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="pv" data-id="4">−</button>
+                        <button class="btn small plus" data-type="pv" data-id="4">+</button>
+                    </div>
+                </div>
+                <div class="status-box pv" data-type="pv" data-id="3">Perna 2<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="pv" data-id="3">−</button>
+                        <button class="btn small plus" data-type="pv" data-id="3">+</button>
+                    </div>
+                </div>
+                <div class="status-box pv" data-type="pv" data-id="2">Braço 1<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="pv" data-id="2">−</button>
+                        <button class="btn small plus" data-type="pv" data-id="2">+</button>
+                    </div>
+                </div>
+                <div class="status-box pv" data-type="pv" data-id="1">Braço 2<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="pv" data-id="1">−</button>
+                        <button class="btn small plus" data-type="pv" data-id="1">+</button>
+                    </div>
+                </div>
+            </div>
 
-        <button id="toggleBarra" class="handle" aria-expanded="true" title="Recolher/Expandir">▼</button>
+            <!-- Armadura por parte -->
+            <div class="status-area">
+                <div class="status-box ar" data-type="ar" data-id="6">Cabeça<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="ar" data-id="6">−</button>
+                        <button class="btn small plus" data-type="ar" data-id="6">+</button>
+                    </div>
+                </div>
+                <div class="status-box ar" data-type="ar" data-id="5">Tronco<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="ar" data-id="5">−</button>
+                        <button class="btn small plus" data-type="ar" data-id="5">+</button>
+                    </div>
+                </div>
+                <div class="status-box ar" data-type="ar" data-id="4">Perna 1<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="ar" data-id="4">−</button>
+                        <button class="btn small plus" data-type="ar" data-id="4">+</button>
+                    </div>
+                </div>
+                <div class="status-box ar" data-type="ar" data-id="3">Perna 2<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="ar" data-id="3">−</button>
+                        <button class="btn small plus" data-type="ar" data-id="3">+</button>
+                    </div>
+                </div>
+                <div class="status-box ar" data-type="ar" data-id="2">Braço 1<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="ar" data-id="2">−</button>
+                        <button class="btn small plus" data-type="ar" data-id="2">+</button>
+                    </div>
+                </div>
+                <div class="status-box ar" data-type="ar" data-id="1">Braço 2<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="ar" data-id="1">−</button>
+                        <button class="btn small plus" data-type="ar" data-id="1">+</button>
+                    </div>
+                </div>
+            </div>
 
-        <!-- Vida por parte -->
-        <div class="status-area">
-            <div class="status-box pv" data-type="pv" data-id="6">Cabeça<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="pv" data-id="6">−</button>
-                    <button class="btn small plus" data-type="pv" data-id="6">+</button>
+            <!-- Mana e PA -->
+            <div class="status-area">
+                <div class="status-box mana" data-type="mana">Mana<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="mana">−</button>
+                        <button class="btn small plus" data-type="mana">+</button>
+                    </div>
                 </div>
-            </div>
-            <div class="status-box pv" data-type="pv" data-id="5">Tronco<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="pv" data-id="5">−</button>
-                    <button class="btn small plus" data-type="pv" data-id="5">+</button>
-                </div>
-            </div>
-            <div class="status-box pv" data-type="pv" data-id="4">Perna 1<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="pv" data-id="4">−</button>
-                    <button class="btn small plus" data-type="pv" data-id="4">+</button>
-                </div>
-            </div>
-            <div class="status-box pv" data-type="pv" data-id="3">Perna 2<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="pv" data-id="3">−</button>
-                    <button class="btn small plus" data-type="pv" data-id="3">+</button>
-                </div>
-            </div>
-            <div class="status-box pv" data-type="pv" data-id="2">Braço 1<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="pv" data-id="2">−</button>
-                    <button class="btn small plus" data-type="pv" data-id="2">+</button>
-                </div>
-            </div>
-            <div class="status-box pv" data-type="pv" data-id="1">Braço 2<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="pv" data-id="1">−</button>
-                    <button class="btn small plus" data-type="pv" data-id="1">+</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Armadura por parte -->
-        <div class="status-area">
-            <div class="status-box ar" data-type="ar" data-id="6">Cabeça<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="ar" data-id="6">−</button>
-                    <button class="btn small plus" data-type="ar" data-id="6">+</button>
-                </div>
-            </div>
-            <div class="status-box ar" data-type="ar" data-id="5">Tronco<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="ar" data-id="5">−</button>
-                    <button class="btn small plus" data-type="ar" data-id="5">+</button>
-                </div>
-            </div>
-            <div class="status-box ar" data-type="ar" data-id="4">Perna 1<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="ar" data-id="4">−</button>
-                    <button class="btn small plus" data-type="ar" data-id="4">+</button>
-                </div>
-            </div>
-            <div class="status-box ar" data-type="ar" data-id="3">Perna 2<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="ar" data-id="3">−</button>
-                    <button class="btn small plus" data-type="ar" data-id="3">+</button>
-                </div>
-            </div>
-            <div class="status-box ar" data-type="ar" data-id="2">Braço 1<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="ar" data-id="2">−</button>
-                    <button class="btn small plus" data-type="ar" data-id="2">+</button>
-                </div>
-            </div>
-            <div class="status-box ar" data-type="ar" data-id="1">Braço 2<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="ar" data-id="1">−</button>
-                    <button class="btn small plus" data-type="ar" data-id="1">+</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Mana e PA -->
-        <div class="status-area">
-            <div class="status-box mana" data-type="mana">Mana<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="mana">−</button>
-                    <button class="btn small plus" data-type="mana">+</button>
-                </div>
-            </div>
-            <div class="status-box pa" data-type="pa">PA<br><span>-</span>
-                <div class="controls">
-                    <button class="btn small minus" data-type="pa">−</button>
-                    <button class="btn small plus" data-type="pa">+</button>
+                <div class="status-box pa" data-type="pa">PA<br><span>-</span>
+                    <div class="controls">
+                        <button class="btn small minus" data-type="pa">−</button>
+                        <button class="btn small plus" data-type="pa">+</button>
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
+
+    <!-- Painel de Regras -->
+    <div id="painelRegras" class="painel-regras">
+        <button id="fecharRegras" class="btn small fechar">✖ Fechar</button>
+        <div class="conteudo-regras">
+            <h2>📖 Regras — RPG PI FLASH</h2>
+            <div id="textoRegras">Carregando regras...</div>
+        </div>
+    </div>
 </body>
 
 </html>
