Edição na ficha

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <input type="number" id="idade" min="0" value="0">
             </div>
             <div><label for="sexo">Sexo:</label>
-                <input type="text" id="sexo" placeholder="M/F">
+                <input type="text" id="sexo" placeholder="M/F/?">
             </div>
             <div><label for="tamanho">Tamanho:</label>
                 <input type="text" id="tamanho" placeholder="Pequeno / Médio / Grande">
@@ -184,24 +184,24 @@
     <section class="ficha" id="especializacoes">
         <h2>Especializações</h2>
         <div class="conteudo">
-            <div><label for="forca">Força:</label><input type="number" id="forca" value="0" min="0"></div>
-            <div> <label for="agilidade">Agilidade:</label><input type="number" id="agilidade" value="0" min="0">
+            <div><label for="forca">Força (COR):</label><input type="number" id="forca" value="0" min="0"></div>
+            <div> <label for="agilidade">Agilidade (COR):</label><input type="number" id="agilidade" value="0" min="0">
             </div>
-            <div> <label for="destreza">Destreza:</label><input type="number" id="destreza" value="0" min="0">
+            <div> <label for="destreza">Destreza (COR):</label><input type="number" id="destreza" value="0" min="0">
             </div>
-            <div> <label for="resistencias">Resistências:</label><input type="number" id="resistencias" value="0"
+            <div> <label for="resistencias">Resistências (ESP):</label><input type="number" id="resistencias" value="0"
                     min="0">
             </div>
-            <div> <label for="vitalidade">Vitalidade:</label><input type="number" id="vitalidade" value="0" min="0">
+            <div> <label for="vitalidade">Vitalidade (ESP):</label><input type="number" id="vitalidade" value="0" min="0">
             </div>
-            <div> <label for="sabedoria">Sabedoria:</label><input type="number" id="sabedoria" value="0" min="0">
+            <div> <label for="sabedoria">Sabedoria (ESP):</label><input type="number" id="sabedoria" value="0" min="0">
             </div>
-            <div> <label for="inteligencia">Inteligência:</label><input type="number" id="inteligencia" value="0"
+            <div> <label for="inteligencia">Inteligência (MEN):</label><input type="number" id="inteligencia" value="0"
                     min="0">
             </div>
-            <div> <label for="carisma">Carisma:</label><input type="number" id="carisma" value="0" min="0">
+            <div> <label for="carisma">Carisma (MEN):</label><input type="number" id="carisma" value="0" min="0">
             </div>
-            <div> <label for="percepcao">Percepção:</label><input type="number" id="percepcao" value="0" min="0">
+            <div> <label for="percepcao">Percepção (MEN):</label><input type="number" id="percepcao" value="0" min="0">
             </div>
         </div>
 
