Altraçoes na ficha e adiçao de numeros quebrados

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
             <div class="titulo">Cabeça</div>
             <div class="linha-valor">
                 <div class="valor vida" id="vida-6">-</div>
-                <input type="number" min="0" class="extra-input" id="vidaExtra-6" placeholder="+PV">
+                <input type="number" min="0" class="extra-input" id="vidaExtra-6" placeholder="+PV" step="0.5">
             </div>
             <div class="linha-valor">
                 <div class="valor armadura" id="arm-6">-</div>
-                <input type="number" min="0" class="extra-input" id="armExtra-6" placeholder="+AR">
+                <input type="number" min="0" class="extra-input" id="armExtra-6" placeholder="+AR" step="0.5">
             </div>
         </div>
 
@@ -85,11 +85,11 @@
             <div class="titulo">Tronco</div>
             <div class="linha-valor">
                 <div class="valor vida" id="vida-5">-</div>
-                <input type="number" min="0" class="extra-input" id="vidaExtra-5" placeholder="+PV">
+                <input type="number" min="0" class="extra-input" id="vidaExtra-5" placeholder="+PV" step="0.5">
             </div>
             <div class="linha-valor">
                 <div class="valor armadura" id="arm-5">-</div>
-                <input type="number" min="0" class="extra-input" id="armExtra-5" placeholder="+AR">
+                <input type="number" min="0" class="extra-input" id="armExtra-5" placeholder="+AR" step="0.5">
             </div>
         </div>
 
@@ -98,11 +98,11 @@
             <div class="titulo">Perna 1</div>
             <div class="linha-valor">
                 <div class="valor vida" id="vida-4">-</div>
-                <input type="number" min="0" class="extra-input" id="vidaExtra-4" placeholder="+PV">
+                <input type="number" min="0" class="extra-input" id="vidaExtra-4" placeholder="+PV" step="0.5">
             </div>
             <div class="linha-valor">
                 <div class="valor armadura" id="arm-4">-</div>
-                <input type="number" min="0" class="extra-input" id="armExtra-4" placeholder="+AR">
+                <input type="number" min="0" class="extra-input" id="armExtra-4" placeholder="+AR" step="0.5">
             </div>
         </div>
 
@@ -111,11 +111,11 @@
             <div class="titulo">Perna 2</div>
             <div class="linha-valor">
                 <div class="valor vida" id="vida-3">-</div>
-                <input type="number" min="0" class="extra-input" id="vidaExtra-3" placeholder="+PV">
+                <input type="number" min="0" class="extra-input" id="vidaExtra-3" placeholder="+PV" step="0.5">
             </div>
             <div class="linha-valor">
                 <div class="valor armadura" id="arm-3">-</div>
-                <input type="number" min="0" class="extra-input" id="armExtra-3" placeholder="+AR">
+                <input type="number" min="0" class="extra-input" id="armExtra-3" placeholder="+AR" step="0.5">
             </div>
         </div>
 
@@ -124,11 +124,11 @@
             <div class="titulo">Braço 1</div>
             <div class="linha-valor">
                 <div class="valor vida" id="vida-2">-</div>
-                <input type="number" min="0" class="extra-input" id="vidaExtra-2" placeholder="+PV">
+                <input type="number" min="0" class="extra-input" id="vidaExtra-2" placeholder="+PV" step="0.5">
             </div>
             <div class="linha-valor">
                 <div class="valor armadura" id="arm-2">-</div>
-                <input type="number" min="0" class="extra-input" id="armExtra-2" placeholder="+AR">
+                <input type="number" min="0" class="extra-input" id="armExtra-2" placeholder="+AR" step="0.5">
             </div>
         </div>
 
@@ -137,11 +137,11 @@
             <div class="titulo">Braço 2</div>
             <div class="linha-valor">
                 <div class="valor vida" id="vida-1">-</div>
-                <input type="number" min="0" class="extra-input" id="vidaExtra-1" placeholder="+PV">
+                <input type="number" min="0" class="extra-input" id="vidaExtra-1" placeholder="+PV" step="0.5">
             </div>
             <div class="linha-valor">
                 <div class="valor armadura" id="arm-1">-</div>
-                <input type="number" min="0" class="extra-input" id="armExtra-1" placeholder="+AR">
+                <input type="number" min="0" class="extra-input" id="armExtra-1" placeholder="+AR" step="0.5">
             </div>
         </div>
 
