--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>RPG PI FLASH</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon1.ico">
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="js/script.js" defer></script>
 </head>
 
