Atualização das regras para ver.2.3.1

--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
         <textarea id="equipamentos" placeholder="Liste os equipamentos..."></textarea>
     </section>
 
-    <!-- Conjuntos e Kits -->
+    <!-- Dinheiro -->
     <section class="ficha">
-        <h2>Conjuntos e Kits</h2>
-        <textarea id="kits" placeholder="Liste os conjuntos e kits..."></textarea>
+        <h2>Dinheiro e Propriedades</h2>
+        <textarea id="dinheiro" placeholder="Liste os valores monetarios e pertences..."></textarea>
     </section>
 
     <!-- Barra Fixa de Status (exibe TOTAIS com +/- para dano/gasto) -->
