Correções de bugs e outros problemas

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-
+<html lang="pt-BR">
 <head>
-    <html lang="pt-BR">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RPG PI FLASH</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon1.ico">
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="js/script.js" defer></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RPG PI FLASH</title>
+
+  <link rel="icon" type="image/x-icon" href="assets/favicon1.ico">
+  <link rel="stylesheet" href="css/style.css" />
+
+  <!-- Marked deve vir antes do seu script; ok manter assim -->
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script src="js/script.js" defer></script>
 </head>
 
 <body>
