Adicionando botão para voltar ao tompo na aba de regras

--- a/index.html
+++ b/index.html
@@ -357,10 +357,14 @@
     <!-- Painel de Regras -->
     <div id="painelRegras" class="painel-regras">
         <button id="fecharRegras" class="btn small fechar">✖ Fechar</button>
+
         <div class="conteudo-regras">
+
             <h2>📖 Regras — RPG PI FLASH</h2>
             <div id="textoRegras">Carregando regras...</div>
         </div>
+
+        <button id="voltarTopoRegras" class="btn small voltar-topo">⬆ Topo</button>
     </div>
 </body>
 
